[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts/stage_complete.gd" type="Script" id=1]
[ext_resource path="res://font.gui.tres" type="DynamicFont" id=3]
[ext_resource path="res://font.gui.big.tres" type="DynamicFont" id=4]
[ext_resource path="res://sound/stagecomplete.ogg" type="AudioStream" id=5]
[ext_resource path="res://asset/GUI/dialog/square.png" type="Texture" id=6]

[node name="stage_complete" type="Node2D"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 512.0
margin_bottom = 256.0
color = Color( 0, 0, 0, 1 )

[node name="cl" type="CanvasLayer" parent="."]

[node name="vbc" type="VBoxContainer" parent="cl"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -131.0
margin_top = -116.0
margin_right = 125.0
margin_bottom = 111.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="stage_n" type="Label" parent="cl/vbc"]
margin_right = 256.0
margin_bottom = 12.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_y = 1
text = "STAGE 1"
align = 1
valign = 1

[node name="stage_EMPTY" type="Label" parent="cl/vbc"]
margin_top = 16.0
margin_right = 256.0
margin_bottom = 28.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
align = 1
valign = 1

[node name="stage" type="Label" parent="cl/vbc"]
margin_top = 32.0
margin_right = 256.0
margin_bottom = 40.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_y = 2
text = "ACE DEGENERATE"
align = 1

[node name="complete" type="Label" parent="cl/vbc"]
margin_top = 44.0
margin_right = 256.0
margin_bottom = 63.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_y = 2
text = "complete !
"
align = 1
valign = 1

[node name="stage_EMPTY2" type="Label" parent="cl/vbc"]
margin_top = 67.0
margin_right = 256.0
margin_bottom = 79.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
align = 1
valign = 1

[node name="stage_EMPTY3" type="Label" parent="cl/vbc"]
margin_top = 83.0
margin_right = 256.0
margin_bottom = 95.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
align = 1
valign = 1

[node name="stage_EMPTY4" type="Label" parent="cl/vbc"]
margin_top = 99.0
margin_right = 256.0
margin_bottom = 111.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
align = 1
valign = 1

[node name="stage_EMPTY5" type="Label" parent="cl/vbc"]
margin_top = 115.0
margin_right = 256.0
margin_bottom = 127.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
align = 1
valign = 1

[node name="stage_EMPTY6" type="Label" parent="cl/vbc"]
margin_top = 131.0
margin_right = 256.0
margin_bottom = 143.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
align = 1
valign = 1

[node name="cc" type="CenterContainer" parent="cl/vbc"]
margin_top = 147.0
margin_right = 256.0
margin_bottom = 243.0

[node name="TextureRect" type="TextureRect" parent="cl/vbc/cc"]
margin_right = 256.0
margin_bottom = 96.0
texture = ExtResource( 6 )

[node name="point_grid" type="GridContainer" parent="cl/vbc/cc"]
margin_left = 48.0
margin_top = 10.0
margin_right = 207.0
margin_bottom = 86.0
columns = 3

[node name="TIME" type="Label" parent="cl/vbc/cc/point_grid"]
margin_right = 100.0
margin_bottom = 12.0
custom_fonts/font = ExtResource( 3 )
text = "TIME LEFT :"

[node name="empyu" type="Label" parent="cl/vbc/cc/point_grid"]
margin_left = 104.0
margin_right = 107.0
margin_bottom = 12.0
custom_fonts/font = ExtResource( 3 )
text = " "

[node name="TIME_NN" type="Label" parent="cl/vbc/cc/point_grid"]
margin_left = 111.0
margin_right = 159.0
margin_bottom = 12.0
custom_fonts/font = ExtResource( 3 )
text = "00"
align = 1

[node name="LIFE" type="Label" parent="cl/vbc/cc/point_grid"]
margin_top = 16.0
margin_right = 100.0
margin_bottom = 28.0
custom_fonts/font = ExtResource( 3 )
text = "LIFE :"

[node name="empyu2" type="Label" parent="cl/vbc/cc/point_grid"]
margin_left = 104.0
margin_top = 16.0
margin_right = 107.0
margin_bottom = 28.0
custom_fonts/font = ExtResource( 3 )
text = " "

[node name="LIFE_NN" type="Label" parent="cl/vbc/cc/point_grid"]
margin_left = 111.0
margin_top = 16.0
margin_right = 159.0
margin_bottom = 28.0
custom_fonts/font = ExtResource( 3 )
text = "00"
align = 1

[node name="HIT" type="Label" parent="cl/vbc/cc/point_grid"]
margin_top = 32.0
margin_right = 100.0
margin_bottom = 44.0
custom_fonts/font = ExtResource( 3 )
text = "HIT SCORE :"

[node name="empyu7" type="Label" parent="cl/vbc/cc/point_grid"]
margin_left = 104.0
margin_top = 32.0
margin_right = 107.0
margin_bottom = 44.0
custom_fonts/font = ExtResource( 3 )
text = " "

[node name="HIT_NN" type="Label" parent="cl/vbc/cc/point_grid"]
margin_left = 111.0
margin_top = 32.0
margin_right = 159.0
margin_bottom = 44.0
custom_fonts/font = ExtResource( 3 )
text = "000000"
align = 1

[node name="empyu3" type="Label" parent="cl/vbc/cc/point_grid"]
margin_top = 48.0
margin_right = 100.0
margin_bottom = 60.0
custom_fonts/font = ExtResource( 3 )
text = " "

[node name="empyu5" type="Label" parent="cl/vbc/cc/point_grid"]
margin_left = 104.0
margin_top = 48.0
margin_right = 107.0
margin_bottom = 60.0
custom_fonts/font = ExtResource( 3 )
text = " "

[node name="empyu4" type="Label" parent="cl/vbc/cc/point_grid"]
margin_left = 111.0
margin_top = 48.0
margin_right = 159.0
margin_bottom = 60.0
custom_fonts/font = ExtResource( 3 )
text = " "

[node name="TOTAL" type="Label" parent="cl/vbc/cc/point_grid"]
margin_top = 64.0
margin_right = 100.0
margin_bottom = 76.0
custom_fonts/font = ExtResource( 3 )
text = "TOTAL  SCORE :"

[node name="empyu6" type="Label" parent="cl/vbc/cc/point_grid"]
margin_left = 104.0
margin_top = 64.0
margin_right = 107.0
margin_bottom = 76.0
custom_fonts/font = ExtResource( 3 )
text = " "

[node name="TOTAL_NN" type="Label" parent="cl/vbc/cc/point_grid"]
margin_left = 111.0
margin_top = 64.0
margin_right = 159.0
margin_bottom = 76.0
custom_fonts/font = ExtResource( 3 )
text = "000000"

[node name="flash" type="ColorRect" parent="cl"]
visible = false
margin_right = 512.0
margin_bottom = 256.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="initial_wait" type="Timer" parent="."]

[node name="calculation_time" type="Timer" parent="."]
wait_time = 0.04

[node name="calculation_life" type="Timer" parent="."]
wait_time = 0.04

[node name="calculation_hit" type="Timer" parent="."]
wait_time = 0.3

[node name="stage_complete_show" type="Timer" parent="."]
wait_time = 0.2

[node name="efx" type="AudioStreamPlayer" parent="."]

[node name="efx_step" type="AudioStreamPlayer" parent="."]

[node name="bgm" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
[connection signal="timeout" from="initial_wait" to="." method="_on_initial_wait_timeout"]
[connection signal="timeout" from="calculation_time" to="." method="_on_calculation_time_timeout"]
[connection signal="timeout" from="calculation_life" to="." method="_on_calculation_life_timeout"]
[connection signal="timeout" from="calculation_hit" to="." method="_on_calculation_hit_timeout"]
[connection signal="timeout" from="stage_complete_show" to="." method="_on_stage_complete_show_timeout"]
